<resources>
    <string name="app_name">My Application</string>
    <string name="jam">JAM</string>
    <string name="some_id">!</string>
    <string name="enjoy_your">ENJOY YOUR LIFE,</string>
    <string name="jam2">JAM! YOURSELF</string>
    <string name="yourself">YOURSELF</string>
    <string name="music_anywh">music anywhere, anytime</string>

    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="doesn_t_hav">Doesnt have an account? make one!</string>

    <string name="sign">SIGN UP</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="already_hav">already have an account?</string>
    <string name="button">Button</string>

    <string name="hi">HI, NAME</string>
    <string name="topmusic">TOP MUSIC</string>
    <string name="latin">LATIN</string>
    <string name="top100">TOP 100</string>
    <string name="kpop">K-POP</string>
    <string name="recently">RECENTLY PLAYED</string>
    <string name="songs_name">SONGS NAME</string>
    <string name="singer">SINGER</string>
</resources>