<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="314dp"
        android:layout_height="217dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/staatliches"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/sign"
        android:textAppearance="@style/login" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="352dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:fontFamily="@font/staatliches"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:textAppearance="@style/email" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="354dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="367dp"
        android:ems="10"
        android:fontFamily="@font/staatliches"
        android:inputType="textPersonName"
        android:text="@string/pass"
        android:textAppearance="@style/pass" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="354dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="274dp"
        android:ems="10"
        android:fontFamily="@font/staatliches"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textAppearance="@style/pass" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="354dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="459dp"
        android:ems="10"
        android:fontFamily="@font/staatliches"
        android:inputType="textPersonName"
        android:text="@string/phone"
        android:textAppearance="@style/pass" />

    <TextView
        android:id="@+id/already_hav"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="573dp"
        android:fontFamily="@font/staatliches"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/already_hav"
        android:textAppearance="@style/doesn_t_hav" />


</RelativeLayout>