<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/mainpict"
        android:layout_width="411dp"
        android:layout_height="400dp"
        android:background="@drawable/mainpict"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/takota"
        android:gravity="top"
        android:text="@string/jam"
        android:textAppearance="@style/jam"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="29dp"
        android:layout_height="136dp"
        android:fontFamily="@font/staatliches"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/enjoy_your"
        android:layout_width="393dp"
        android:layout_height="72dp"
        android:fontFamily="@font/staatliches"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/enjoy_your"
        android:textAppearance="@style/enjoy_your"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/jam2"
        android:layout_width="93dp"
        android:layout_height="51dp"
        android:fontFamily="@font/staatliches"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/jam2"
        android:textAppearance="@style/jam2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/yourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/staatliches"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/yourself"
        android:textAppearance="@style/enjoy_your"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_conversion_absoluteHeight="54dp"
        tools:layout_conversion_absoluteWidth="200dp"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/music_anywh"
        android:layout_width="336dp"
        android:layout_height="33dp"
        android:fontFamily="@font/staatliches"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/music_anywh"
        android:textAppearance="@style/music_anywh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="488dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="140dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/component1"
        tools:ignore="MissingConstraints"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="136dp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="565dp"
        tools:srcCompat="@drawable/component1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="146dp"
        android:layout_height="57dp"
        app:srcCompat="@drawable/component2"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="565dp" />

</androidx.constraintlayout.widget.ConstraintLayout>